# reflow

./: .gitignore  Cargo.toml  LICENSE  LICENSE-APACHE  LICENSE-MIT  MICROSANDBOX_DEPLOYMENT.md  MICROSANDBOX_INTEGRATION.md  MICROSANDBOX_INTEGRATION_SUMMARY.md  Makefile  README-MDBOOK.md  README.md  REFLOW_NETWORK_WASM_AUDIT_SUMMARY.md  STATE_SHARING_SOLUTION.md  api_service_registry.json  api_service_registry.yaml  book.toml  demo-test.sh  docker-compose.yml  npm-package-readme.md  test-integration.sh  test_microsandbox.sh
crates/pyexec/: .local.env  Cargo.toml  Dockerfile  Dockerfile.client  docker-compose.yml  start.sh  test-client.html
crates/pyexec/src/: error.rs  lib.rs  main.rs  package_manager.rs  python_vm.rs  rpc.rs  websocket.rs
crates/reflow_actor/: Cargo.toml
crates/reflow_actor/src/: lib.rs  message.rs
crates/reflow_components/: Cargo.toml
crates/reflow_components/src/: data_operations.rs  data_operations_tests.rs  data_ops.rs  end_to_end_tests.rs  error_handling.rs  flow_control.rs  flow_control_tests.rs  integration.rs  integration_tests.rs  lib.rs  registry.rs  rules.rs  scripting.rs  state_management.rs  synchronization.rs  utility.rs
crates/reflow_graph/: Cargo.toml
crates/reflow_graph/benches/: bench.rs
crates/reflow_graph/src/: history.rs  lib.rs  tests.rs  types.rs
crates/reflow_js/: Cargo.toml  README.md  runtime.md
crates/reflow_js/src/: async_runtime.rs  console.rs  lib.rs  runtime.rs  security.rs  tests.rs  timers.rs
crates/reflow_js/src/fs/: mod.rs  permissions.rs  virtual_fs.rs
crates/reflow_js/src/modules/: commonjs.rs  esm.rs  mod.rs  resolver.rs
crates/reflow_js/src/networking/: fetch.rs  mod.rs  websocket.rs
crates/reflow_js/tests/: edge_case_tests.rs  permissions_tests.rs  runtime_tests.rs  web_apis_tests.rs
crates/reflow_microsandbox_runtime/: Cargo.toml  README.md
crates/reflow_microsandbox_runtime/src/: extractor.rs  lib.rs  main.rs
crates/reflow_network/: Cargo.toml  MICROSANDBOX_CORE_INTEGRATION.md  RUN_MICROSANDBOX_TESTS.md  webdriver.json
crates/reflow_network/benches/: bench.rs
crates/reflow_network/example/: README.md  actor_example.html  actor_example.js  comprehensive_test.html  comprehensive_test.js  distributed_example.rs  index.html  start.js  state_sharing_test.html
crates/reflow_network/scripts/: python_runtime_server.py
crates/reflow_network/src/: actor.rs  api_kit.rs  bridge.rs  connector.rs  discovery.rs  distributed_network.rs  graph.rs  helper.rs  lib.rs  message.rs  message_test.rs  network.rs  network_test.rs  ports.rs  proxy.rs  router.rs  tracing.rs  types.rs
crates/reflow_network/src/graph/: history.rs  journal.rs  mod.rs  types.rs
crates/reflow_network/src/multi_graph/: mod.rs  tests.rs  wasm_bindings.rs  workspace.rs
crates/reflow_network/src/redis_state/: actor_state.rs  mod.rs  types.rs
crates/reflow_network/src/script_discovery/: actor_bridge.rs  discovery.rs  embedded_microvm_runtime.rs  extractor.rs  factory.rs  microsandbox_runtime.rs  mod.rs  registry.rs  script_actor_trait.rs  test_helpers.rs  tests.rs  types.rs
crates/reflow_network/src/websocket_rpc/: client.rs  mod.rs  script_actor.rs  script_actor_wrapper.rs  tests.rs  types.rs
crates/reflow_network/tests/: message_compression_test.rs  message_websocket_test.rs  microsandbox_integration_test.rs  microsandbox_server_test.rs
crates/reflow_node/: Cargo.toml  README.md  build.js  package-lock.json  package.json
crates/reflow_node/examples/: basic_example.js
crates/reflow_node/lib/: graph.d.ts  graph.js  index.js  network.js
crates/reflow_node/src/: lib.rs  runtime.rs
crates/reflow_node/src/neon_bindings/: actor.rs  errors.rs  graph.rs  mod.rs  multi_graph.rs  network.rs  utils.rs
crates/reflow_py/: Cargo.toml
crates/reflow_py/src/: lib.rs  remote_py.rs  remote_tests.rs  tests.rs
crates/reflow_script/: Cargo.toml
crates/reflow_script/examples/: db_pool_example.rs  multi_db_example.rs
crates/reflow_script/src/: context.rs  db_actor.rs  db_manager.rs  extism.rs  javascript.rs  lib.rs  python.rs
crates/reflow_script/src/db_pool/: mod.rs  postgres.rs  sqlite.rs
crates/reflow_server/: Cargo.toml
crates/reflow_server/src/: lib.rs  main.rs  zeal_converter.rs
crates/reflow_tracing/: Cargo.toml
crates/reflow_tracing/src/: config.rs  main.rs  server.rs
crates/reflow_tracing/src/protocol/: messages.rs  mod.rs
crates/reflow_tracing/src/storage/: memory.rs  mod.rs  sqlite.rs
crates/reflow_tracing/src/tracing/: events.rs  mod.rs  replay.rs  storage.rs  versioning.rs
crates/reflow_tracing_protocol/: Cargo.toml
crates/reflow_tracing_protocol/src/: client.rs  lib.rs
crates/reflow_wasm/: Cargo.toml  INTEGRATION.md  README.md  build_examples.sh  test.sh
crates/reflow_wasm/examples/: README.md
crates/reflow_wasm/examples/async_actor/: Cargo.toml
crates/reflow_wasm/examples/counter_actor/: Cargo.toml
crates/reflow_wasm/examples/multiply_actor/: Cargo.toml  build.sh
crates/reflow_wasm/src/: lib.rs
crates/reflow_wasm/tests/: async_actor_test.rs  plugin_tests.rs  sdk_tests.rs
crates/reflow_wasm_go/: Cargo.toml  README.md  build_examples.sh  build_examples_go.sh  debug_go.mod  debug_json.go  go.mod  test_json.go  test_simple.go
crates/reflow_wasm_go/sdk/: exports.go  go.mod  host.go  reflow.go
crates/reflow_wasm_go/src/: basic_test.rs  debug_test.rs  go_integration_test.rs  host_function_test.rs  lib.rs  minimal_test.rs  tests.rs  utils.rs
examples/multi_graph_workspace/: Cargo.toml  simple_workspace_example.rs  workspace_example.rs
examples/multi_graph_workspace/monitoring/: system_monitor.graph.json
examples/multi_graph_workspace/simple/: generator.graph.json  processor.graph.json
examples/multi_graph_workspace/src/: actors.rs  lib.rs
examples/tracing_integration/: Cargo.toml  README.md
examples/tracing_integration/config/: server_config.toml
examples/tracing_integration/docker/: docker-compose.yml
examples/tracing_integration/scripts/: start_server.sh
examples/tracing_integration/src/: complete_example.rs  monitoring_client.rs  simple_client.rs
(+181 files in other folders)
