[workspace]
resolver = "2"
members = [
  "crates/*",
]

[workspace.dependencies]
serde_json = "1.0.133"
serde = { version = "1.0.215", features = ["derive"] }
anyhow = "1.0.94"


[profile.release]
opt-level = 'z'
lto = true
codegen-units = 1

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 's'
lto = 'thin'

# Enable high optimizations for dependencies but not for our code:
[profile.dev.package."*"]
opt-level = 's'