[workspace]
resolver = "2"
members = [
  "crates/*",
  "examples/wasm_actor",
]

[workspace.dependencies]
serde_json = "1.0.133"
serde = { version = "1.0.215", features = ["derive"] }
anyhow = "1.0.94"



[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 16
strip = true
panic = "abort"

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1
debug = true
debug-assertions = true
overflow-checks = true
lto = false
codegen-units = 512
incremental = true

# Enable high optimizations for dependencies but not for our code:
[profile.dev.package."*"]
opt-level = 2

[profile.test]
opt-level = 1
debug = true
debug-assertions = true
overflow-checks = true
lto = false
codegen-units = 512
incremental = true