[package]
name = "pyexec-service"
version = "0.1.0"
edition = "2021"
authors = ["Damilare Akinlaja"]

[dependencies]
tokio = { version = "1.32", features = ["full"] }
tokio-tungstenite = "0.20"
futures-util = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.4", features = ["v4", "serde"] }
pyo3 = { version = "0.20", features = ["auto-initialize"] }
tracing = "0.1"
tracing-subscriber = "0.3"
thiserror = "1.0"
anyhow = "1.0"
once_cell = "1.18"
dashmap = "6.1.0"
futures = "0.3"
directories = "6.0.0"