[package]
name = "reflow_components"
version = "0.1.0"
edition = "2021"

[dependencies]
reflow_network = { path = "../reflow_network" }
actor_macro = { path = "../actor_macro" }
anyhow = "1.0"
parking_lot = "0.12"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
flume = "0.11.0"
futures = "0.3"
tokio = { version = "1.0", features = ["full"] }
once_cell = "1.8"
uuid = "1.0"
chrono = "0.4"

# http operations
reqwest = "0.12.15"

# shell operations
nu-command = "0.103.0"  # Provides nu commands
nu-engine = "0.103.0"   # Core engine
nu-parser = "0.103.0"   # Parser for nu language
nu-protocol = "0.103.0" # Protocol definitions

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = ["Window", "Performance"] }
gloo-utils = "0.2"
tsify = "0.4"