[package]
name = "reflow_components"
version = "0.1.0"
edition = "2021"

[dependencies]
reflow_actor = { path = "../reflow_actor" }
reflow_graph = { path = "../reflow_graph" }
reflow_tracing_protocol = { path = "../reflow_tracing_protocol" }
actor_macro = { path = "../actor_macro" }

# Core dependencies
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
parking_lot = { workspace = true }
flume = { workspace = true }
futures = { workspace = true }

# HTTP/Network
reqwest = { version = "0.12", features = ["json", "stream"] }

# File operations
tokio = { version = "1", features = ["fs", "io-util"] }

# Data processing
regex = "1.10"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4", "serde"] }

# JavaScript runtime
rquickjs = { version = "0.6", features = ["array-buffer", "bindgen", "classes", "futures", "loader", "macro", "parallel", "properties"] }

[dev-dependencies]
reflow_server = { path = "../reflow_server" }
