[package]
name = "reflow_js"
version = "0.1.0"
edition = "2024"
description = "A lightweight JavaScript runtime built with Deno JavaScript runtime engine"
license = "MIT"
repository = "https://github.com/reflow/reflow_js"
readme = "README.md"

[lib]
crate-type = ["cdylib", 'rlib']

[dependencies]
deno_runtime = {version = "0.205.0", features = ["transpile"]}    
deno_resolver = "0.28.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
url = "2.4"
once_cell = "1.19.0"
tokio = { version = "1", features = ["full"] }
sys_traits = "0.1.8"

[dev-dependencies]
tokio = { version = "1", features = ["full", "test-util", "macros"] }

# Enable any needed environment access
[features]
default = []

