[package]
name = "reflow_js"
version = "0.1.0"
edition = "2021"
description = "A lightweight JavaScript runtime built with Deno JavaScript runtime engine"
license = "MIT"
repository = "https://github.com/reflow/reflow_js"
readme = "README.md"

[lib]
crate-type = ["cdylib", 'rlib']

[dependencies]
# deno_runtime = {version = "0.205.0", features = ["transpile"]}    
# deno_resolver = "0.28.0"
reflow_actor ={ path = "../reflow_actor" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
url = "2.4"
once_cell = "1.19.0"
tokio = { version = "1", features = ["full"] }
sys_traits = "0.1.8"
flume = "0.11.0"
rquickjs = { version = "0.6", features = ["array-buffer", "bindgen", "classes", "futures", "loader", "macro", "parallel", "properties"] }
uuid = { version = "1.0", features = ["v4"] }
anyhow ={ workspace = true}
reqwest = { version = "0.11", features = ["json", "stream"] }
bytes = "1.0"
hyper = { version = "0.14", features = ["full"] }
thiserror = {workspace = true}
tokio-util = "0.7"
tokio-stream = "0.1.17"
tracing = "0.1"
async-trait = "0.1"
futures = "0.3"
http = "0.2"
mime = "0.3"
base64 = "0.21"
sha1 = "0.10"
sha2 = "0.10"
md5 = "0.7"
rand = "0.8"
ring = "0.16"
hex = "0.4"
percent-encoding = "2.3"
async-stream = "0.3"
pin-project = "1.0"
tokio-fs = "0.1"
walkdir = "2.3"
filetime = "0.2"
libc = "0.2"
import_map = "0.15"
node_resolver = "0.48"
semver = "1.0"
regex = "1.0"
dashmap = "5.5"
hyper-tungstenite = "0.11"
tungstenite = "0.20"
tokio-tungstenite = "0.20"
tower = "0.4"
tower-http = { version = "0.4", features = ["cors", "trace"] }
http-body-util = "0.1"
socket2 = "0.5"
rustls = "0.21"
tokio-rustls = "0.24"
bincode = "1.3"
lz4_flex = "0.11"
notify = "6.0"
crossbeam-channel = "0.5"
tokio-process = "0.2"
signal-hook = "0.3"
signal-hook-tokio = { version = "0.3", features = ["futures-v0_3"] }
nix = "0.27"
which = "4.4"

# Module loading
swc_common = "0.33"
swc_ecma_parser = "0.141"
swc_ecma_transforms_typescript = "0.186"

[dev-dependencies]
tokio = { version = "1", features = ["full", "test-util", "macros"] }
tempfile = "3.8"

# Enable any needed environment access
[features]
default = []
