[package]
name = "reflow_microsandbox_runtime"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "microsandbox-runtime-server"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = "0.20"
futures-util = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
microsandbox = "0.1.2"
parking_lot = "0.12"
uuid = { version = "1", features = ["v4", "serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
chrono = "0.4"
flume = "0.11"
clap = { version = "4", features = ["derive"] }
regex = "1.10"

# Reflow dependencies
reflow_network = { path = "../reflow_network" }
reflow_graph = { path = "../reflow_graph" }