# cargo-features = ["edition2024"]

[package]
name = "reflow_network"
version = "0.1.0"
edition = "2024"
authors = ["Damilare Akinlaja"]

[lib]
crate-type = ["cdylib", 'rlib']
path = "src/lib.rs"
doctest = false

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
actor_macro = { path = "../actor_macro" }
parking_lot = "0.12.3"
flate2 = "1.0.35"
flume = "0.11.0"
rusty_pool = "0.7.0"
num_cpus = "1.16.0"
once_cell = "1.19.0"
tween = "2.0.2"
wasm-bindgen = { version = "0.2.86" }
foreach = "0.3.0"
undo = "0.52.0"
futures = { version = "0.3" }
bitcode = { version = "0.6.4", features = ["serde"] }
ordered-float = "5.0.0"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
zstd = "0.13.2"
rayon = "1.10.0"

[target.'cfg(target_arch = "wasm32")'.dependencies]
lz4_flex = "0.11.3"
gloo-utils = "0.2"
gloo-events = "0.2"
web-sys = { version = "0.3.77", features = [
    "console",
    "IdbRequest",
    "IdbVersionChangeEvent",
    "IdbFactory",
    "Window",
    "IdbDatabase",
    "IdbObjectStore",
    "IdbTransaction",
    "IdbTransactionMode",
    "IdbOpenDbRequest",
    "DomException",
    "Storage",
] }
tsify = { version = "0.4.5", features = ["js"] }
wasm-bindgen-futures = "0.4.42"
js-sys = "0.3.77"
wasm-bindgen-test = "0.3.50"

[target.'cfg(not(target_arch = "wasm32"))'.dev-dependencies]
criterion = { version = "0.5.1", features = ["html_reports"] }

[features]
flowtrace = []
default = []

[[bench]]
name = "graph_bench"
harness = false
path = "benches/bench.rs"

[dev-dependencies]
wasm-bindgen-test = "0.3.50"
