# cargo-features = ["edition2024"]

[package]
name = "reflow_network"
version = "0.1.0"
edition = "2024"
authors = ["Damilare Akinlaja"]

[lib]
crate-type = ["cdylib", 'rlib']
path = "src/lib.rs"
doctest = false

[dependencies]
reflow_tracing_protocol = { path = "../reflow_tracing_protocol" }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = {workspace = true}
reflow_graph ={ path = "../reflow_graph" }
reflow_actor ={ path = "../reflow_actor" }
actor_macro = { path = "../actor_macro" }
parking_lot = {workspace = true}
flate2 = "1.0.35"
flume = {workspace = true}
rusty_pool = "0.7.0"
num_cpus = "1.16.0"
once_cell = "1.19.0"
tween = "2.0.2"
glob = "0.3.2"

futures-util = "0.3.31"

foreach = "0.3.0"
undo = "0.52.0"
futures = { version = "0.3" }
bitcode = { version = "0.6.4", features = ["serde"] }
ordered-float = "5.0.0"

chrono = { version = "0.4", features = ["serde"] }
serde_with = { version = "2.1" , default-features = false, features = ["alloc", "std"]}
tracing ={ workspace = true}
async-trait = "0.1.88"
reqwest = {version = "0.12.20", features = ["json"], optional = true }
serde_yaml = "0.9.30"
lazy_static = "1.4.0"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tokio = { version = "1", features = ["full"] }
zstd = "0.13.2"
rayon = "1.10.0"
reqwest = {version = "0.12.20", features = ["json"]}
tokio-tungstenite = "0.27.0"
uuid = {workspace = true, features = ["v4"]}
hostname = "0.4.1"
semver = "1.0.26"
sha2 = "0.10.9"
prometheus = "0.14.0"
lz4_flex = "0.11.3"
brotli = "7.0.0"



[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = { version = "0.2.86"}
lz4_flex = "0.11.3"
gloo-utils = "0.2"
gloo-events = "0.2"
web-sys = { version = "0.3.77", features = [
    "console",
    "IdbRequest",
    "IdbVersionChangeEvent",
    "IdbFactory",
    "Window",
    "IdbDatabase",
    "IdbObjectStore",
    "IdbTransaction",
    "IdbTransactionMode",
    "IdbOpenDbRequest",
    "DomException",
    "Storage",
    "Request",
    "RequestInit",
    "RequestMode",
    "Response",
] }
tsify = { version = "0.4.5", features = ["js"] }
wasm-bindgen-futures = "0.4.42"
js-sys = "0.3.77"
wasm-bindgen-test = "0.3.50"
console_error_panic_hook = "0.1.7"
serde-wasm-bindgen = "0.6.5"

[target.'cfg(not(target_arch = "wasm32"))'.dev-dependencies]
criterion = { version = "0.5.1", features = ["html_reports"] }

[features]
flowtrace = []
default = []
wasm = []



[dev-dependencies]
wasm-bindgen-test = "0.3.50"
tracing-subscriber = "0.3"

[[example]]
name = "distributed_example"
path = "example/distributed_example.rs"

[[example]]
name = "workspace_example"
path = "../../examples/multi_graph_workspace/workspace_example.rs"

[package.metadata.wasm-pack.profile.release]
wasm-opt = false
