[package]
name = "reflow_py"
version = "0.1.0"
edition = "2024"
authors = ["Damilare Akinlaja"]

[dependencies]
futures-util = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
tokio-tungstenite = { version = "0.26", features = ["native-tls"] }
url = "2.3"
uuid = { version = "1.3", features = ["v4", "serde"] }
thiserror = "2.0"
tracing = "0.1.41"
pyexec-service = {path = "../pyexec"}
flume = "0.11.0"
futures = "0.3"
anyhow = "1.0"
rand = "0.9"
env_logger = "0.11"


[dev-dependencies]
tokio = { version = "1", features = ["full", "test-util", "macros"] }