# cargo-features = ["edition2024"]
[package]
name = "reflow_script"
version = "0.1.0"
edition = "2024"
authors = ["Damilare Akinlaja"]

[lib]
crate-type = ["cdylib", "rlib"]
path = "src/lib.rs"
doctest = false

[dependencies]
reflow_network = { path = "../reflow_network" }
actor_macro = { path = "../actor_macro" }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
parking_lot = "0.12.3"
once_cell = "1.19.0"
futures = "0.3"
bitcode = { version = "0.6.4", features = ["serde"] }
flume = "0.11.0"
async-trait = "0.1.88"
uuid = "1.16.0"
tokio = { version = "1", features = ["full"] }
dashmap = "6.1.0"
env_logger = "0.11"
tracing = "0.1.41"
tracing-subscriber = "0.3"
lazy_static = "1.4.0"
base64 = "0.22.1"

# Database support
rusqlite = { version = "0.34.0", optional = true }
tokio-postgres = { version = "0.7.10", optional = true }
deadpool-postgres = { version = "0.14.1", optional = true }

# Optional runtimes
reflow_js = { path = "../reflow_js", optional = true }
reflow_py = { path = "../reflow_py", optional = true }
deno_runtime = {version = "0.205.0", optional = true }

# Extism plugin support
extism = {version = "1.10.0", optional = true}

[dev-dependencies]
wasm-bindgen-test = "0.3.50"

[features]
default = ["python", "extism", "sqlite", "postgres"]
python = ["reflow_py"]
deno = ["reflow_js", "deno_runtime"]
extism = ["dep:extism"]
webworker = []
sqlite = ["dep:rusqlite"]
postgres = ["dep:tokio-postgres", "dep:deadpool-postgres"]
