# cargo-features = ["edition2024"]
[package]
name = "reflow_tracing"
version = "0.1.0"
edition = "2024"
authors = ["Damilare Akinlaja"]

[[bin]]
name = "reflow_tracing"
path = "src/main.rs"

[dependencies]
# Core dependencies
reflow_tracing_protocol = { path = "../reflow_tracing_protocol" }
serde = { workspace = true }
serde_json = { workspace = true }
toml = "0.8.12"
anyhow = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true, features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
tokio = { version = "1", features = ["full"] }
futures = "0.3"
async-trait = "0.1.88"
tracing = { workspace = true }
tracing-subscriber = "0.3"
once_cell = "1.19.0"
parking_lot = { workspace = true }
flume = { workspace = true }
dashmap = "6.1.0"
derive_more = { version = "1.0.0", features = ["display"] }

# WebSocket dependencies
tokio-tungstenite = "0.27.0"
tungstenite = "0.27.0"

# Database (SQLite) - required for persistent tracing storage
sqlx = { version = "0.8.2", features = ["runtime-tokio-rustls", "sqlite", "chrono", "uuid"] }

# Compression
zstd = "0.13.2"
lz4_flex = "0.11.3"
brotli = "7.0.0"
flate2 = "1.0.35"

# Metrics and observability
prometheus = "0.14.0"
hostname = "0.4.1"

# Utilities
lazy_static = "1.4.0"
num_cpus = "1.16.0"
semver = { version = "1.0.26", features = ["serde"] }
sha2 = "0.10.9"

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3.8"

[features]
default = ["server", "client"]
server = []
client = []
