[package]
name = "multiply_actor"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
reflow_wasm = { path = "../.." }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
extism-pdk = { version = "1.4.0" }

[profile.release]
opt-level = "z"
lto = true
strip = true
panic = "abort"

[workspace]